[gd_scene load_steps=18 format=3 uid="uid://67ic5nix6m4w"]

[ext_resource type="PackedScene" uid="uid://d4biv87sinkk1" path="res://character.tscn" id="1_27mtl"]
[ext_resource type="Script" path="res://main.gd" id="1_puokp"]
[ext_resource type="PackedScene" uid="uid://ceyrugadvxkjw" path="res://enemyspawn.tscn" id="3_xclp6"]
[ext_resource type="Script" path="res://camera_2d.gd" id="4_yq4g2"]
[ext_resource type="Texture2D" uid="uid://dy2dqswyle8it" path="res://sprites/bg_oneshooters2.png" id="6_edprf"]
[ext_resource type="Texture2D" uid="uid://bno6ymqyvp7h1" path="res://sprites/Jedanims/reload ui/jedweaponui.png" id="8_g5wx0"]
[ext_resource type="Texture2D" uid="uid://cfbsi3nvg1nsp" path="res://bonuses/ammo_pack.png" id="8_r0e3b"]
[ext_resource type="PackedScene" uid="uid://hm68mls7f6mg" path="res://jebulletui.tscn" id="9_fsngq"]
[ext_resource type="PackedScene" uid="uid://c2w83k7j2ggod" path="res://target.tscn" id="10_5unnn"]
[ext_resource type="PackedScene" uid="uid://b66imsg6xttyv" path="res://room.tscn" id="11_35bvq"]
[ext_resource type="Texture2D" uid="uid://djm5e7xioilic" path="res://ui/dodge_bar/dodge_bar_inactive.png" id="11_nu4lv"]
[ext_resource type="Texture2D" uid="uid://bddq0yxkqgq15" path="res://sprite plugs/706ed7a3a5eb8f7e4bd227188cff51d1.png" id="11_wmiod"]
[ext_resource type="Texture2D" uid="uid://ctc0ompolh7kw" path="res://ui/dodge_bar/dodge_bar.png" id="12_sm2la"]
[ext_resource type="PackedScene" uid="uid://ceafcuo2kew1o" path="res://ammo_bonus1.tscn" id="14_h73cx"]
[ext_resource type="PackedScene" uid="uid://bkflifhalv718" path="res://shield_bonus.tscn" id="15_1ognw"]
[ext_resource type="PackedScene" uid="uid://cumhdmj4ac520" path="res://shooting_enemy.tscn" id="16_e6wpd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_haprv"]
radius = 13.0384

[node name="main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_puokp")
metadata/_edit_horizontal_guides_ = [-12.0]
metadata/_edit_lock_ = true

[node name="character" parent="." instance=ExtResource("1_27mtl")]
z_index = 1
position = Vector2(53, 306)

[node name="Camera2D" type="Camera2D" parent="character"]
position = Vector2(-53, -306)
anchor_mode = 0
ignore_rotation = false
script = ExtResource("4_yq4g2")
wiggle_intensity = 12.0
wiggle_speed = 3.0
zoom_in = Vector2(1.3, 1.3)

[node name="enemyspawn" parent="." instance=ExtResource("3_xclp6")]
position = Vector2(363, 298)

[node name="target" parent="enemyspawn" instance=ExtResource("10_5unnn")]
z_index = 4

[node name="фигнядлятеста" type="ColorRect" parent="."]
visible = false
offset_left = -90.0
offset_top = 873.0
offset_right = 1030.0
offset_bottom = 1164.0

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
top_level = true
z_index = -7
offset_left = -82.0
offset_top = -65.0
offset_right = 452.0
offset_bottom = 736.0
color = Color(0.9484, 0.85557, 0.960793, 1)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
top_level = true
z_index = -4
offset_left = -82.0
offset_top = -65.0
offset_right = 452.0
offset_bottom = 736.0
color = Color(0.188235, 0.164706, 0.239216, 1)

[node name="bg position" type="Node2D" parent="."]
position = Vector2(-360, 0)
scale = Vector2(2, 2)

[node name="BgOneshooters" type="Sprite2D" parent="bg position"]
z_index = -4
texture_filter = 1
texture = ExtResource("6_edprf")
centered = false

[node name="room" parent="." instance=ExtResource("11_35bvq")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 21.0
offset_top = 38.0
offset_right = 327.0
offset_bottom = 277.0
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="stash1" type="Sprite2D" parent="CanvasLayer/CenterContainer"]
visible = false
texture_filter = 1
position = Vector2(256.95, 114)
scale = Vector2(2, 2)
texture = ExtResource("8_r0e3b")

[node name="stash2" type="Sprite2D" parent="CanvasLayer/CenterContainer"]
visible = false
texture_filter = 1
position = Vector2(43, 114)
scale = Vector2(2, 2)
texture = ExtResource("8_r0e3b")

[node name="ui_weapon" type="Sprite2D" parent="CanvasLayer/CenterContainer"]
texture_filter = 1
position = Vector2(151, 131)
scale = Vector2(4.42188, 4.42188)
texture = ExtResource("8_g5wx0")
metadata/_edit_lock_ = true

[node name="Jebulletui" parent="CanvasLayer/CenterContainer/ui_weapon" instance=ExtResource("9_fsngq")]
position = Vector2(0, -19.2226)

[node name="Jebulletui2" parent="CanvasLayer/CenterContainer/ui_weapon" instance=ExtResource("9_fsngq")]
position = Vector2(-17.1873, -9.27208)

[node name="Jebulletui3" parent="CanvasLayer/CenterContainer/ui_weapon" instance=ExtResource("9_fsngq")]
position = Vector2(-16.735, 10.1767)

[node name="Jebulletui4" parent="CanvasLayer/CenterContainer/ui_weapon" instance=ExtResource("9_fsngq")]
position = Vector2(-0.226149, 18.7703)

[node name="Jebulletui5" parent="CanvasLayer/CenterContainer/ui_weapon" instance=ExtResource("9_fsngq")]
position = Vector2(16.5088, 9.49822)

[node name="Jebulletui6" parent="CanvasLayer/CenterContainer/ui_weapon" instance=ExtResource("9_fsngq")]
position = Vector2(16.735, -9.27207)

[node name="slot1" type="Marker2D" parent="CanvasLayer/CenterContainer/ui_weapon"]
position = Vector2(0, -19.4487)

[node name="slot2" type="Marker2D" parent="CanvasLayer/CenterContainer/ui_weapon"]
position = Vector2(16.735, -9.27207)

[node name="slot3" type="Marker2D" parent="CanvasLayer/CenterContainer/ui_weapon"]
position = Vector2(16.5088, 9.49822)

[node name="slot4" type="Marker2D" parent="CanvasLayer/CenterContainer/ui_weapon"]
position = Vector2(-0.226147, 18.7703)

[node name="slot5" type="Marker2D" parent="CanvasLayer/CenterContainer/ui_weapon"]
position = Vector2(-16.735, 10.1767)

[node name="slot6" type="Marker2D" parent="CanvasLayer/CenterContainer/ui_weapon"]
position = Vector2(-17.1873, -9.27207)

[node name="Area2D" type="Area2D" parent="CanvasLayer/CenterContainer"]
position = Vector2(-75, 46)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/CenterContainer/Area2D"]
position = Vector2(226, 0)
shape = SubResource("CircleShape2D_haprv")

[node name="spawner_metrics" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_right = 360.0
offset_bottom = 295.0
theme_override_font_sizes/normal_font_size = 30
text = "dfdfsfsdfsdfssfsdfsf"

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.478
anchor_top = 0.761
anchor_right = 0.478
anchor_bottom = 0.761
offset_left = -15.08
offset_top = -27.04
offset_right = -5.08
offset_bottom = -9.04001
scale = Vector2(3, 3)
value = 57.0
fill_mode = 3
texture_under = ExtResource("11_nu4lv")
texture_progress = ExtResource("12_sm2la")

[node name="space" type="CanvasLayer" parent="."]
layer = -1

[node name="706Ed7a3a5Eb8f7e4Bd227188Cff51d1" type="Sprite2D" parent="space"]
texture_filter = 1
position = Vector2(178.5, 320)
scale = Vector2(0.363, 1.288)
texture = ExtResource("11_wmiod")
metadata/_edit_lock_ = true

[node name="RigidBody2D" parent="." instance=ExtResource("14_h73cx")]
position = Vector2(164, 303)

[node name="RigidBody2D2" parent="." instance=ExtResource("15_1ognw")]
position = Vector2(60, 312)

[node name="shooting_enemy" parent="." instance=ExtResource("16_e6wpd")]
position = Vector2(253, 294)

[node name="shooting_enemy2" parent="." instance=ExtResource("16_e6wpd")]
position = Vector2(295, 294)

[node name="shooting_enemy3" parent="." instance=ExtResource("16_e6wpd")]
position = Vector2(336, 294)

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="body_entered" from="CanvasLayer/CenterContainer/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="CanvasLayer/CenterContainer/Area2D" to="." method="_on_area_2d_body_exited"]
